<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    tools:context="com.example.sjors.sjors_witteveen_pset6.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:maxWidth="0dp"
            android:layout_height="wrap_content"
            android:lines="6"
            android:textSize="16sp"
            android:padding="12dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/initial_text"
                android:textSize="16sp"
                android:gravity="center"
                android:id="@+id/joke_text"
                android:layout_margin="2dp"
                android:padding="10dp"
                android:background="@color/white"
                android:textColor="@android:color/black"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/get_random_joke_text"
            android:onClick="onRandomButtonClick"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_button"
            android:src="@drawable/ic_save_joke"
            android:onClick="onSave"
            android:contentDescription="@string/save_button_desc" />

    </LinearLayout>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/first_name"
        android:inputType="textCapWords"
        android:hint="@string/first_name"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/last_name"
        android:inputType="textCapWords"
        android:hint="@string/last_name"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="blabla"/>

</LinearLayout>